tests/liquid/neg/tags0-unsafe.js
/*@ moo :: (number) => {v:string | v = "string"} */
function moo(x) {
  var z = typeof(x);
  return z;
}
